data/derived/comb/progs/unify/prog5946.ml.out
Characters 85-94:
  if checkSame(listReverse (explode (w)),explode w) then true else explode w;;
                                                                   ^^^^^^^^^
Error: This expression has type char list
       but an expression was expected of type bool
